--- a/nsedownload/pom.xml
+++ b/nsedownload/pom.xml
@@ -9,5 +9,46 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.1</version>
         </dependency>
-    </dependencies>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.6</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.10</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j -->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>2.13.1</version>
+          <type>pom</type>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+      <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+      <dependency>
+          <groupId>com.opencsv</groupId>
+          <artifactId>opencsv</artifactId>
+          <version>5.1</version>
+      </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.39</version>
+      </dependency>
+
+
+
+  </dependencies>
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
